Bug 1175631 - Make sure TabParent::GetWidget returns a widget even if it's display:none. r=smaug